2A/05_Projet_GL/src/test/deca/context/invalid/complet/79_return_float_int.deca
// Description :
//  return Object au lieu class A 
// Resultats :
//    ligne 13 : le Object ne peut pas être affecté à A
// Historique : 
//  cree le 16/01/2024


class A {
    A a ;

    A get() {
        Object o ;
        return o ; 
    }
}